# trading-agent

./: .gitignore  pyproject.toml  sweep_BTC_USDT_1h_1000.csv  sweep_BTC_USDT_1h_2000.csv  sweep_ETH_USDT_1h_2000.csv  sweep_SOL_USDT_1h_2000.csv
src/trading_agent/: _util.py  arbitrage.py  arbitrage_executor.py  backtest.py  circuit_breaker.py  config.py  exchange.py  feature_engine.py  fetcher.py  main.py  ml_strategy.py  monitor.py  news.py  notify.py  order_engine.py  performance.py  portfolio.py  reconciliation.py  regime.py  sentiment.py  shadow_mode.py  signal.py  signal_noise_client.py  state.py  strategy.py
tests/: conftest.py  test_arbitrage.py  test_arbitrage_executor.py  test_backtest.py  test_circuit_breaker.py  test_exchange.py  test_ml_strategy.py  test_monitor.py  test_new_modules.py  test_onchain.py  test_order_engine.py  test_portfolio.py  test_regime.py  test_strategy.py
