[project]
name = "trading-agent"
version = "0.1.0"
description = "Minimal crypto trading agent with RSI strategy"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "ta>=0.11",
    "openai>=1.0",
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]
